Add global settings for css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,21 @@
   --ff-primary: 'Space Mono', monospace;
   --br: 1em;
 }
+
+/*------ Global Settings------*/
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+p {
+  margin: 0;
+  padding: 0;
+}
