--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ p {
   padding: 0;
 }
 
+/* Body styling */
 body {
   background-color: var(--clr-primary--300);
   color: var(--clr-primary--500);
@@ -41,6 +42,7 @@ body {
   position: relative;
 }
 
+/* Calculator */
 .container {
   background-color: var(--clr-neutral--100);
   display: grid;
@@ -50,13 +52,16 @@ body {
   border-radius: var(--br);
 }
 
+/* User Input */
 .user__input {
   grid-column: 1/2;
   background-color: pink;
   border-radius: var(--br);
   padding: 2rem;
+
 }
 
+/* User Output */
 .user__output {
   grid-column: 2/3;
   background-color: var(--clr-primary--900);
