--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,13 @@ body {
   text-align: center;
 }
 
+.btn--input:hover {
+  background: var(--clr-neutral--100);
+  border: 3px solid #a0e7df;
+  text-align: right;
+  padding-right: 6%;
+}
+
 /* Styling the number of people section*/
 .people_number__container {
   position: relative;
