Add styling to the main btns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,18 @@ input {
   font-weight: 300;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 input:hover {
   border: 3px solid #a0e7df;
 }
@@ -173,6 +185,10 @@ input:focus {
   font-weight: 300;
   font-size: 1.6rem;
   text-align: center;
+}
+
+.btn--input:focus {
+  background-color: unset;
 }
 
 .btn--input:hover {
@@ -290,9 +306,10 @@ input:focus {
   color: hsl(228, 45%, 44%);
 }
 
+/* ---- Media ----*/
+
 @media screen and (max-width: 997px) {
   body {
-
     height: unset;
     margin: 1rem;
   }
@@ -303,6 +320,44 @@ input:focus {
 
   .container {
     display: unset;
+  }
+}
+
+@media screen and (max-width: 535px) {
+  /* body {
+    background-color: wheat;
+    height: unset;
+    margin: 1rem;
+  }
+
+  .logo {
+    margin: 2rem auto;
+  }
+
+  .container {
+    display: unset;
+  } */
+
+  .tip__btns {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(2rem, 1fr));
+    gap: 1rem;
+  }
+
+  .btn {
+    background-color: var(--clr-primary--900);
+    width: 100%;
+    padding: 0.22rem;
+    color: var(--clr-neutral--100);
+    font-weight: 600;
+    font-size: 1.7rem;
+    font-family: var(--ff-primary);
+    border-radius: 0.2em;
+    border: none
+  }
+
+  input {
+    width: 100%;
   }
 
 }
