--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,3 +342,67 @@ input:focus {
     font-size: 2.5rem;
   }
 }
+
+@media screen and (max-width: 405px) {
+
+  body {
+    background-color: wheat;
+  }
+
+  /* .container {
+    justify-content: space-between;
+  } */
+
+  .user__input {
+    padding: 0.5rem;
+    gap: 1.5rem;
+  }
+
+  .btn {
+    font-size: 1.5rem;
+  }
+
+  .user__output {
+    padding: 1.5rem;
+    margin-top: 1rem;
+  }
+
+  .sum__result {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 329px) {
+
+  body {
+    background-color: palevioletred;
+  }
+
+  .btn {
+    font-size: 1.5rem;
+  }
+
+  .user__output {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+  }
+
+  .sum__result {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
+  .tip_result {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .result {
+    display: flex;
+    flex-direction: row;
+    font-size: 0.7rem;
+  }
+
+}
