Add comments for the functions in js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,14 @@ input:focus {
   text-transform: uppercase;
 }
 
+.btn--reset:hover {
+  background-color: unset;
+}
+
+.btn--reset:focus {
+  background-color: unset;
+}
+
 /* Styling Credits section */
 
 .attribution {
